--- a/Project 1 Convolutional LSTM Neural Networks/Project_1_Student_code.ipynb
+++ b/Project 1 Convolutional LSTM Neural Networks/Project_1_Student_code.ipynb
@@ -53,7 +53,7 @@
     "id": "xCZj_eY9Vi-R"
    },
    "source": [
-    "#Part 0: Importing and normalizing data"
+    "# Part 0: Importing and normalizing data"
    ]
   },
   {
@@ -91,7 +91,7 @@
     "id": "372Co-fUV1fD"
    },
    "source": [
-    "#Part 1: Plotting cross entropy"
+    "# Part 1: Plotting cross entropy"
    ]
   },
   {
@@ -150,11 +150,14 @@
     "\n",
     "1.   How is the the negative log-likelihood of p affected when p is small? How about when p is large?\n",
     "\n",
-    "  ANS: \n",
+    "  ANS: As seen from the graph, negative log-likelihood and p have kind of an inverse relationship. Which means, \n",
+    "  * smaller p = larger negative log-likelihood\n",
+    "  * larger p = smaller negative log-likelihood\n",
+    "  \n",
     "\n",
     "2.   Why does the behavior of the negative log-likelihood function make it a good objective function for a minimization problem specifically when the output can be interpreted as a probability space?\n",
     "\n",
-    "  ANS: \n",
+    "  ANS: Essentially, if probability of output class is high, the value of objective funtion would be low. Which can be interepreted as netowrk is close to the solution. Other way round, if probability is low, the final cost will be higher which signifies that netowrk is far away from the solution and need to make an update. \n",
     "\n",
     "\n"
    ]
@@ -166,7 +169,7 @@
     "id": "_uF9StudWHXQ"
    },
    "source": [
-    "#Part 2: Overfit CNN"
+    "# Part 2: Overfit CNN"
    ]
   },
   {
@@ -761,19 +764,19 @@
     "\n",
     "1.   What does the loss of the training set go to? \n",
     "\n",
-    "  ANS: \n",
+    "  ANS: Close to 0 around 4.7754e-05\n",
     "\n",
     "2.   What does the loss of the testing set go to? \n",
     "\n",
-    "  ANS: \n",
+    "  ANS: This is hgiher, around 0.702\n",
     "  \n",
     "3.   What is the reason for the discrepancy between the training and testing set loss? \n",
     "\n",
-    "  ANS:\n",
+    "  ANS: The model is fitting very well for the training dataset. The big difference between the two losses is attributed to ovefitting. The model doesn' generalize well on the testing set. \n",
     "\n",
     "4.   Explain why the accuracy of the testing set, after training, differs so much from the testing set regardless of achieving high training accuracy. Name two ways to avoid this. \n",
     "\n",
-    "  ANS: "
+    "  ANS: The big difference between the two losses is attributed to ovefitting. The model doesn' generalize well on the testing set. It can be avoided by use of regularization like dropout. Or by using a smaller network. "
    ]
   },
   {
@@ -783,7 +786,7 @@
     "id": "5QhQ4ZXGcZJf"
    },
    "source": [
-    "#Part 3: Dropout on input layer"
+    "# Part 3: Dropout on input layer"
    ]
   },
   {
@@ -1370,19 +1373,14 @@
    "source": [
     "Answer the following questions: \n",
     "\n",
-    "\n",
-    "\n",
-    "1.   What does the loss of the training set go to? \n",
-    "\n",
-    "  ANS: \n",
+    "1. What does the loss of the training set go to?\n",
+    "  + ANS: It goes close to 0.0659   \n",
     "  \n",
-    "2.   What does the loss of the testing set go to? \n",
-    "\n",
-    "  ANS: \n",
-    "\n",
-    "3.   Why is the loss of the training set so different from the loss of the testing set regardless of using dropout? \n",
-    "\n",
-    "  ANS:"
+    "2. What does the loss of the testing set go to? \n",
+    "  + ANS: It goes close to 0.3843   \n",
+    "  \n",
+    "3. Why is the loss of the training set so different from the loss of the testing set regardless of using dropout? \n",
+    "  + ANS: The model is overfitting even though we are applying dropout. This is because dropout is not applied in the correct location of the network. Applying dropout at input is wasteful because we throwing away input pixels randomly which might contain essential information. "
    ]
   },
   {
@@ -1392,7 +1390,7 @@
     "id": "2P2qmzu_c91_"
    },
    "source": [
-    "#Part 4-I: Dropout on Hidden Layers"
+    "# Part 4-I: Dropout on Hidden Layers"
    ]
   },
   {
@@ -1981,19 +1979,19 @@
     "\n",
     "1.   What does the loss of the training set go to? \n",
     "\n",
-    "  ANS: \n",
+    "  ANS: Goes to close to 0.0170\n",
     "  \n",
     "2.   What does the loss of the testing set go to? \n",
     "\n",
-    "  ANS: \n",
+    "  ANS: Close to 0.3350 \n",
     "\n",
     "3.   Why was using dropout more effective here in comparison to the architecture in Part 3? \n",
     "\n",
-    "  ANS: \n",
+    "  ANS: Applying dropout in hidden layer is better. Because this way, network can regularize appropriately therefore not overfit as much.\n",
     "  \n",
     "4.   What is the difference in accuracy, after training, between the training and testing set? Is the model a good fit for the data? \n",
     "\n",
-    "  ANS: "
+    "  ANS: The difference in accuracy is 99.39 - 92.30 = 7.09%. This is not the best but compared to previous networks, it is an improvement. "
    ]
   },
   {
@@ -2003,7 +2001,7 @@
     "id": "L1QJu0Y4dUKj"
    },
    "source": [
-    "#Part 4-II [Sub-Question 5]: Dropout on Input and Hidden Layers"
+    "# Part 4-II [Sub-Question 5]: Dropout on Input and Hidden Layers"
    ]
   },
   {
@@ -2596,19 +2594,19 @@
     "\n",
     "1.   What does the loss of the training set go to? \n",
     "\n",
-    "  ANS: \n",
+    "  ANS: Goes to 0.1125\n",
     "  \n",
     "2.   What does the loss of the testing set go to? \n",
     "\n",
-    "  ANS:\n",
+    "  ANS: Goes to 0.3363\n",
     "  \n",
     "3.   What is the difference in accuracy, after training, between the training and testing set?  \n",
     "\n",
-    "  ANS: \n",
+    "  ANS: Difference is 95.68 - 87.53 = 8.15 %\n",
     "\n",
     "4.   Compare results in 4 with results in 5. Comment on robustness and accuracy.\n",
     "\n",
-    "  ANS:"
+    "  ANS: The testig accuracy decreases when dropout is applied to input as well.  Which also means that the robustness decreases as for unseen data (i.e. test data) model doesn't perform as well."
    ]
   },
   {
@@ -2618,7 +2616,7 @@
     "id": "C60C05uR7KFF"
    },
    "source": [
-    "#Part 5 : Activation Functions"
+    "# Part 5 : Activation Functions"
    ]
   },
   {
@@ -2857,15 +2855,15 @@
     "  \n",
     "2-a.   Does ‘tanh’ as output activation work with Cross-entropy loss?\n",
     "\n",
-    "  ANS:\n",
+    "  ANS: It doesn't work as the loss doesn't minimize.\n",
     "\n",
     "2-b.   Give a reason why tanh is not recommended with cross entropy loss?\n",
     "\n",
-    "  ANS: \n",
+    "  ANS: Because its value ranges from -1 to +1 instead of 0 to 1. For cross entropy loss, $ln(x) + ln(1-x)$ value of x has to be between 0 and 1, anything beyond it would be log of negative value which is undefined. \n",
     "\n",
     "2-c.   Give a reason why sigmoid does not cause problem as tanh with Cross entropy loss?\n",
     "\n",
-    "  ANS: \n"
+    "  ANS: Because range of sigmoid is [0,1]\n"
    ]
   },
   {
