--- a/Project 1 Convolutional LSTM Neural Networks/Project_1_Student_code.ipynb
+++ b/Project 1 Convolutional LSTM Neural Networks/Project_1_Student_code.ipynb
@@ -2863,7 +2863,7 @@
     "\n",
     "2-c.   Give a reason why sigmoid does not cause problem as tanh with Cross entropy loss?\n",
     "\n",
-    "  ANS: Because range of sigmoid is [0,1]\n"
+    "  ANS: Because range of sigmoid is (0,1) it works well with cross entropy loss\n"
    ]
   },
   {
@@ -2873,7 +2873,7 @@
     "id": "XL3M_r3Sd2oI"
    },
    "source": [
-    "#Part 6: Creating a CLDNN"
+    "# Part 6: Creating a CLDNN"
    ]
   },
   {
