--- a/Project 2 Autoencoders/Project_2_Student_code.ipynb
+++ b/Project 2 Autoencoders/Project_2_Student_code.ipynb
@@ -55,6 +55,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "nN1cUmn1p0vn"
    },
    "outputs": [],
@@ -97,6 +98,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "vqYvEhZHN_h4"
    },
    "outputs": [],
@@ -246,6 +248,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "tEwdV09ms_KF"
    },
    "outputs": [],
@@ -383,6 +386,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "-a7Xlz7VuBl8",
     "scrolled": true
    },
@@ -459,6 +463,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "a-wENWWnuQGa"
    },
    "outputs": [],
@@ -613,6 +618,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "c-lVJ3pfvhT5"
    },
    "outputs": [],
@@ -736,6 +742,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "2nuk3UxSxD9D"
    },
    "outputs": [],
@@ -856,21 +863,21 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 2.7 - Learning [learning/conda-5.1.0-py27-gpu]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "sys_learning27"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
