--- a/Project 5 One Shot Learning/one_shot_learning_Student_191111.ipynb
+++ b/Project 5 One Shot Learning/one_shot_learning_Student_191111.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -259,7 +259,7 @@
     "\n",
     "    # Controller RNN layer, we use an LSTM\n",
     "    # Recommended: tf.keras.layers.LSTMCell\n",
-    "    self.controller = tf.keras.layers.LSTMCell(self.rnn_size_size)\n",
+    "    self.controller = tf.keras.layers.LSTMCell(self.rnn_size)\n",
     "\n",
     "    # controller_output \n",
     "    #          -> read_key (batch_size, head_num*memory_vector_dim)\n",
@@ -358,23 +358,26 @@
     "\n",
     "\n",
     "    # Set least used memory slot in prev_M to ZERO, make use of prev_indices!\n",
-    "    M_erased = # Fill in\n",
+    "    # M*(1-E)\n",
+    "    M_erased = prev_M * tf.expand_dims(1.0 - tf.one_hot(prev_indices[:, -1], self.num_memory_slots), dim=2)\n",
     "\n",
     "    # Write to memory, form M_t, using the w_w_list and write_keys\n",
     "    # Iterate over each head\n",
     "    for i in range(self.head_num):\n",
-    "      # Fill in\n",
-    "      M_written = # Fill in\n",
+    "      # Fill in - M_written[p,i,:]=M_erased[p,i,:]+w_w_list[m,p,i]×write_key_list[m,p,:]\n",
+    "      M_written = M_erased + tf.matmul(tf.expand_dims(w_w_list[i], axis=2),tf.expand_dims(write_key_list[i], axis=1))\n",
     "    \n",
     "    # Compute usage weights w^u_t for the current iteration\n",
-    "    w_u = # Fill in\n",
+    "    # w_u[p,:]=self.gamma×prev_w_u[p,:]+∑i=0head_num−1w_r_list[i,p,:]+∑i=0head_num−1w_w_list[i,p,:]\n",
+    "    w_u = self.gamma * prev_w_u + tf.add_n(w_r_list) + tf.add_n(w_w_list)\n",
     "\n",
     "    # Concatenate controller's output and the read memory\n",
     "    # content, they are then fed into a dense layer to obtain the logits,\n",
     "    # which will be used for obtaininig labels and computing the  cross-entropy \n",
     "    # values in NTMOneShotLearningModel below\n",
     "    mann_output = tf.concat([controller_output] + read_vector_list, axis=1)\n",
-    "    logits = # Fill in\n",
+    "    #  we update the state dictionary , and feed [controller's output + the read vector list] to self.controller_output_to_logits\n",
+    "    logits = self.controller_output_to_logits(mann_output)\n",
     "\n",
     "    state = {\n",
     "        'controller_state': controller_state,\n",
@@ -391,23 +394,31 @@
     "    # Fill in\n",
     "\n",
     "    # Compute the inner products, norms\n",
-    "\n",
-    "    # Compute the exp(K(M,key))'s\n",
+    "    read_key = tf.expand_dims(read_key, axis=2)\n",
+    "    in_prod  = tf.matmul(prev_M, read_key) \n",
+    "    read_key_norm = tf.sqrt(tf.reduce_sum(tf.square(read_key), axis=1, keepdims=True))\n",
+    "    in_prod_norm  = tf.sqrt(tf.reduce_sum(tf.square(prev_M)  , axis=2, keepdims=True))\n",
     "    \n",
+    "    # Compute the exp(K(M,key))'s\n",
+    "    exp_K = tf.math.exp(tf.squeeze(in_prod/(in_prod_norm * read_key_norm + 1e-8)))\n",
+    "                        \n",
     "    # Obtain read weights\n",
+    "    w_r = exp_K / tf.reduce_sum(exp_K, axis=1, keepdims=True)\n",
     "\n",
     "    return w_r\n",
+    "\n",
     "\n",
     "  def compute_write_weights(self, sig_alpha, prev_w_r, prev_w_lu):\n",
     "    # Compute the write weights\n",
     "    # Fill in\n",
-    "\n",
+    "    w_w = sig_alpha * prev_w_r + (1.0 - sig_alpha) * prev_w_lu \n",
     "    return w_w\n",
     "\n",
     "  def compute_w_lu(self, prev_w_u):\n",
     "    # Fill in\n",
-    "    return indices, prev_w_lu\n",
-    "  "
+    "    temp, indices =tf.nn.top_k(prev_w_u, k=self.num_memory_slots) \n",
+    "    prev_w_lu = tf.reduce_sum(tf.one_hot(indices[:, -self.head_num:], depth=self.num_memory_slots), axis=1)\n",
+    "    return indices, prev_w_lu\n"
    ]
   },
   {
@@ -424,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -502,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -611,7 +622,39 @@
     "colab_type": "code",
     "id": "VruOInLHkZUK"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/aggarw82/.conda/envs/cent7/5.1.0-py36/py36_tf1.15/lib/python3.7/site-packages/tensorflow_core/python/util/dispatch.py:180: calling expand_dims (from tensorflow.python.ops.array_ops) with dim is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use the `axis` argument instead\n",
+      "WARNING:tensorflow:From /home/aggarw82/.conda/envs/cent7/5.1.0-py36/py36_tf1.15/lib/python3.7/site-packages/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+      "Model initialized\n",
+      "Entered Dataloader\n",
+      "10.0% data loaded.\n",
+      "20.0% data loaded.\n",
+      "30.0% data loaded.\n",
+      "40.0% data loaded.\n",
+      "50.0% data loaded.\n",
+      "60.0% data loaded.\n",
+      "70.0% data loaded.\n",
+      "80.0% data loaded.\n",
+      "90.0% data loaded.\n",
+      "100.0% data loaded.\n",
+      "Data loaded\n",
+      "1st\t2nd\t3rd\t4th\t5th\t6th\t7th\t8th\t9th\t10th\tepoch\tloss\n",
+      "0.1750\t0.2500\t0.2000\t0.2250\t0.1646\t0.2237\t0.2254\t0.2188\t0.1964\t0.1458\t0\t80.4511\n",
+      "0.2250\t0.2250\t0.2375\t0.2125\t0.2785\t0.2338\t0.2222\t0.1905\t0.1667\t0.2000\t100\t80.5759\n",
+      "0.2750\t0.1875\t0.2250\t0.1750\t0.3291\t0.2667\t0.2500\t0.3175\t0.2364\t0.3636\t200\t80.2704\n",
+      "0.2375\t0.2250\t0.2500\t0.1875\t0.2405\t0.1842\t0.0959\t0.1818\t0.1579\t0.2449\t300\t80.4109\n",
+      "0.2375\t0.2250\t0.2375\t0.1750\t0.2564\t0.2632\t0.2817\t0.2836\t0.1961\t0.2000\t400\t80.4023\n"
+     ]
+    }
+   ],
    "source": [
     "restore_training = False\n",
     "label_type = \"one_hot\"\n",
@@ -662,9 +705,9 @@
    ]
   },
   "kernelspec": {
-   "display_name": "Python 3.6 - Learning [learning/conda-5.1.0-py36-gpu]",
+   "display_name": "py36_tf1.115",
    "language": "python",
-   "name": "sys_learning36"
+   "name": "py36_tf1.15"
   },
   "language_info": {
    "codemirror_mode": {
@@ -676,7 +719,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
